Fix module layout

--- a/examples/fail2ban.yaml
+++ b/examples/fail2ban.yaml
@@ -1,5 +1,8 @@
 ---
-email: 'fail2ban@%{domain}'
-whitelist: 
-   - '127.0.0.1'
-   - '192.168.122.0/24'
+ensure:           present
+ensure_enable:    true
+ensure_running:   running
+email:            'fail2ban@%{domain}'
+whitelist:
+  - '127.0.0.1'
+  - '192.168.122.0/24'
