Add feature to disable a service for specific hosts

--- a/examples/fail2ban.yaml
+++ b/examples/fail2ban.yaml
@@ -2,6 +2,8 @@
 ensure:           present
 ensure_enable:    true
 ensure_running:   running
+#disabled_hosts:
+#  - ''
 email:            'fail2ban@%{::domain}'
 whitelist:
   - '127.0.0.1'
