--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ env:
   - PUPPET_VERSION=2.7.11
   - PUPPET_VERSION=2.7.18
   - PUPPET_VERSION=3.1.1
+  - PUPPET_VERSION=3.2.2
+  - PUPPET_VERSION=3.6.2
+  - PUPPET_VERSION=3.7.1
 notifications:
   email: travis@debian-solutions.de
 gemfile: .gemfile
