--- a/.travis.yml
+++ b/.travis.yml
@@ -30,14 +30,14 @@ matrix:
     env: PUPPET_VERSION="~> 4.0" STRICT_VARIABLES="yes" CHECK=test
 notifications:
   email: false
-deploy:
-  provider: puppetforge
-  user: dhoppe
-  password:
-    secure: "DwZQehUuDCVCjj/7a82Bj6at+JXcF5b6Rl7impaFnia9QgvEPvdt72cxX04SkPfLM99wy/x3RPqHeEfyoPMHoR9SpUKnFWFChumkW794qpWFCweG18vOr9P+E6PGUp3xRXHar7Yv1BGg/pdEajq+s97NQJn42pkhanl6v8JD5MI="
-  on:
-    tags: true
-    # all_branches is required to use tags
-    all_branches: true
-    # Only publish if our main Ruby target builds
-    rvm: 1.9.3
+# deploy:
+#   provider: puppetforge
+#   user: dhoppe
+#   password:
+#     secure: "DwZQehUuDCVCjj/7a82Bj6at+JXcF5b6Rl7impaFnia9QgvEPvdt72cxX04SkPfLM99wy/x3RPqHeEfyoPMHoR9SpUKnFWFChumkW794qpWFCweG18vOr9P+E6PGUp3xRXHar7Yv1BGg/pdEajq+s97NQJn42pkhanl6v8JD5MI="
+#   on:
+#     tags: true
+#     # all_branches is required to use tags
+#     all_branches: true
+#     # Only publish if our main Ruby target builds
+#     rvm: 1.9.3
