--- a/.sync.yml
+++ b/.sync.yml
@@ -4,6 +4,7 @@
   docker_sets:
     - set: centos6-64
     - set: centos7-64
+    - set: centos8-64
     - set: debian8-64
     - set: debian9-64
     - set: debian10-64
