--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 ---
+os: linux
 dist: bionic
 language: ruby
 cache: bundler
@@ -7,7 +8,7 @@ before_install:
   - bundle --version
 script:
   - 'bundle exec rake $CHECK'
-matrix:
+jobs:
   fast_finish: true
   include:
   - rvm: 2.4.4
@@ -104,7 +105,7 @@ notifications:
       - "chat.freenode.org#voxpupuli-notifications"
 deploy:
   provider: puppetforge
-  user: puppet
+  username: puppet
   password:
     secure: "Qvf6e0d8zyEQ2RkUFQB14wXE7dPS/+lN0WCgs79udjKp4UCRDvrIdDW6JROg5k1Kw75rQ+VuhyW2e3QXFfW65nlVrciipYlSYyA5iZaLV4ffy1NLhuscIMwuX6SNe22ut7oNB+kNfKX/rT3jnUfrg28UjJ3r4TYvzyW/e2XKx4E="
   on:
