Consolidate jail.conf.epp for RedHat osfamily
Currently there is a `jail.conf.epp` for every
combination of RHEL, CentOS, Rocky and Alma Linux.

Use the RHEL instance for all cases except on CentOS7 which
is uniquely (for some unknown reason) different to the RHEL7 one.

--- a/data/RedHat.yaml
+++ b/data/RedHat.yaml
@@ -1,2 +1,3 @@
 ---
 fail2ban::config_file_before: 'paths-fedora.conf'
+fail2ban::config_file_template: "fail2ban/RedHat/%{facts.os.release.major}/etc/fail2ban/jail.conf.epp"
