--- a/examples/fail2ban-Debian.yaml
+++ b/examples/fail2ban-Debian.yaml
@@ -1,8 +1,8 @@
 ---
 fail2ban::action: 'action_mb'
 fail2ban::bantime: 600
-fail2ban::email: "admin@%{::domain}"
-fail2ban::sender: "fail2ban@%{::fqdn}"
+fail2ban::email: "admin@%{facts.networking.domain}"
+fail2ban::sender: "fail2ban@%{facts.networking.fqdn}"
 fail2ban::jails:
   - 'ssh'
   - 'ssh-ddos'
