--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,4 +1,5 @@
+---
 fixtures:
   repositories:
-    extlib: "https://github.com/voxpupuli/puppet-extlib.git"
-    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
+    extlib: https://github.com/voxpupuli/puppet-extlib.git
+    stdlib: https://github.com/puppetlabs/puppetlabs-stdlib.git
